[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/0x72_DungeonTilesetII_v1.3/sheet_sprites/big_orc.png" type="Texture" id=2]
[ext_resource path="res://resources/lights/basic_circle.png" type="Texture" id=3]
[ext_resource path="res://scenes/enemies/OrcBoss.gd" type="Script" id=4]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 2

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 13 )

[sub_resource type="CircleShape2D" id=3]
radius = 27.0185

[node name="Boss" type="KinematicBody2D"]
z_index = 2
collision_layer = 2
collision_mask = 22
script = ExtResource( 4 )

[node name="Character" parent="." instance=ExtResource( 1 )]
position = Vector2( -1, 0 )

[node name="Sprite" parent="Character" index="0"]
material = SubResource( 1 )
texture = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
position = Vector2( 1.83516, -8.56411 )
texture = ExtResource( 3 )
color = Color( 0.231373, 0.309804, 0.219608, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -13 )
shape = SubResource( 2 )

[node name="TrapDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrapDetector"]
position = Vector2( 0, -10 )
shape = SubResource( 3 )

[node name="Center" type="Position2D" parent="."]
position = Vector2( 0, -14 )
[connection signal="area_entered" from="TrapDetector" to="." method="_on_TrapDetector_area_entered"]
[connection signal="area_exited" from="TrapDetector" to="." method="_on_TrapDetector_area_exited"]

[editable path="Character"]
